--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 certifi==2022.12.7
 charset-normalizer==2.0.12
 Django==4.0.3
+django-cors-headers==3.14.0
 django-environ==0.8.1
 django-filter==2.4.0
 djangorestframework==3.13.1
